# datak

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/routes/: automation.py  config.py  export.py  report_jobs.py  sensors.py  system.py  websocket.py
backend/app/core/: formula.py
backend/app/db/: influx.py
backend/app/drivers/: base.py  canbus.py  modbus.py  mqtt.py  system.py  virtual_output.py
backend/app/models/: __init__.py  audit.py  base.py  sensor.py  user.py
backend/app/services/: automation.py  buffer.py  cloud_sync.py  command_listener.py  csv_engine.py  telemetry_pipeline.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_formula.py
configs/: gateway.example.yaml
frontend/src/views/: ConfigView.vue  SensorsView.vue
scripts/: check_logs.py  debug_remote.py  deploy_remote.py  remote_diag.py  setup_nekazari.py  test_data_injector.py
